# figure

./: CMakeLists.txt  Makefile  Makefile-nout  README.md  \  define.h  figure.cpp  figure.h  iquilateraltriangle.cpp  iquilateraltriangle.h  isoscelestriangle.cpp  isoscelestriangle.h  main.cpp  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  quadrate.cpp  quadrate.h  rhomb.cpp  rhomb.h  rightquadrangle.cpp  rightquadrangle.h  righttriangle.cpp  righttriangle.h  triangle.cpp  triangle.h  view.cpp  view.h
